fixed min width fon ing constant and pizza quantity fixed min-width for ing const comp buttons fixed all overflow-y to be auto

--- a/src/components/addresses/AddressCreateEdit.scss
+++ b/src/components/addresses/AddressCreateEdit.scss
@@ -6,7 +6,7 @@
     &__form {
         padding: 0 14px;
         max-height: 380px;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
     &__form-control {
         margin-bottom: 16px;
