--- a/src/components/recipe/PizzaRecipe.scss
+++ b/src/components/recipe/PizzaRecipe.scss
@@ -51,7 +51,7 @@
         display: flex;
     }
     &__pizza--quantity {
-        min-width: 32px;
+        min-width: 80px;
         text-align: center;
         display: inline-block;
         padding: 5px 18px;
